fixed visibility of buttons on mobile - fixed creation of shifts - added shift - added event creation through double click - added shift buttons to event creation

--- a/program/src/styles/components/_app-detail.scss
+++ b/program/src/styles/components/_app-detail.scss
@@ -1,4 +1,5 @@
 .app-detail {
     height: calc(100vh - #{$app-bar-height} - #{$app-content-padding} * 2);
+    margin-top: 50px;
     overflow: hidden;
 }
