--- a/program/src/styles/elements/_vuecal.scss
+++ b/program/src/styles/elements/_vuecal.scss
@@ -9,6 +9,10 @@
     font-size: 14pt;
   }
 
+  &__no-event {
+    display: none;
+  }
+
   .month-view {
     .vuecal {
       &__event {
@@ -37,6 +41,14 @@
     .vuecal__event--all-day {
       margin: 3px 3px 3px 2px;
       width: unset;
+    }
+  }
+}
+
+@media (max-width: $breakpoint-min-md) {
+  .vuecal {
+    &__event-content {
+      display: none
     }
   }
 }
